# rythmic_data_engine

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  DATA.md  Makefile  PARAMETERS.md  RUNBOOK.md  __init__.py  api.py  audit_data.py  backtest.py  build.sh  client.py  collector.py  db.py  deploy.sh  engine_architecture.html  go_live.py  live_trader.py  migrate_parquet.py  models.py  pytest.ini  requirements-dev.txt  requirements.txt  sync.py
config/: MES_config.json  MNQ_config.json  MYM_config.json  live_config.json  live_config_schema.py  model_checksums.json  orb_config.json
config/envs/: legends.json  paper.json  test.json  tradeify.json
deploy/: audit_daemon.service  live_trader.service  nq_executor.service  nq_executor@.service  update.sh
docs/: AUDIT_GAP_REPORT.md  AUDIT_REAUDIT_2026-04-30.md  architecture.html  audit_gap_T1.md  audit_gap_T2.md  audit_gap_T3.md  audit_gap_coordinator.md  execution_layer_audit.md
migrations/: 001_trades.sql  002_schema_reconcile.sql  003_rename_live_tables.sql  004_add_instrument_strategy.sql  005_legends_price.sql  20260423_session_summary_crash_safe.sql
models/: orb_scaler_latest.pkl
proto/: rithmic.proto
quality_rules/: cpp_standards.yaml  cross_system.yaml  escalation.yaml  formula_audit.yaml  python_standards.yaml
scripts/: audit_daemon.py  backup_pg.sh  config_schema_audit.py  contamination_audit.py  cpp_build_check.sh  cpp_standards_check.py  cross_system_audit.py  eod_summary.py  flatten.py  formula_audit.py  hermes_session.py  kill_test_suite.py  no_deploy.py  pipeline_run.py  python_standards_check.py  quality_gate.sh  run_fast_tests.sh  sync_cpp_trades.py  test_live_cycle.py  test_rithmic_login.py  use_env.py
src/: audit.cpp  audit.hpp  client.cpp  client.hpp  collector.cpp  collector.hpp  config.hpp  dashboard.cpp  db.cpp  db.hpp  log.hpp  main.cpp  orb_strategy_main.cpp  validator.hpp  wal.hpp
src/execution/: executor_main.cpp  latency_logger.cpp  latency_logger.hpp  log.hpp  orb_config.hpp  orb_db.hpp  orb_strategy.cpp  orb_strategy.hpp  order_manager.cpp  order_manager.hpp  risk_manager.cpp  risk_manager.hpp  sdk_md_feed.hpp
strategy/: __init__.py  features.py  micro_orb.py
tests/: audit_engine.py  conftest.py  run_tests.sh  test_audit_checks.py  test_audit_system.py  test_connection.cpp  test_db.cpp  test_feature_parity.py  test_features.py  test_live_trader.py  test_models.py  test_orb_parity.py  test_preflight.py  test_ui_kill.py  test_use_env.py  test_validator.cpp
tests/execution/: test_orb_strategy.cpp  test_risk_manager.cpp
ui/: __init__.py  app.py
ui/routers/: __init__.py  live.py
ui/templates/: live.html
